removed usage of guava's ImmutableList